syntax = "proto3";

package transmission;

service Transmission {
    rpc SendFileToServer (SendFile) returns (Status) {}
    rpc TakeFileFromServer (Path) returns (TakeFile) {}
    rpc DeleteFileOnServer (Path) returns (Status) {}
}

message Binary {
    repeated bytes binary = 2;
}

message Path {
    string path = 1;
}

message Status {
    bool status = 1;
}

message SendFile {
    Path path_to_new_file = 1;
    Binary binary_file = 2;
}

message TakeFile {
    optional Binary binary_file = 1;
    Status bool_status = 2;
}